# apromise

./: CMakeLists.txt  conanfile.py
include/apromise/: apromise.hpp  schedulers.hpp
include/promises/: promises.hpp  schedulers.hpp
src/: apromise.cpp  libpromises.cpp  promises.cpp
tests/: CMakeLists.txt  apromise.cpp  promises.cpp
